# catkin_ws_4rl

./: README.md  robotReacher-v0.py  test_her.py
temp_ws/: Untitled.ipynb  intera.sh
temp_ws/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
temp_ws/devel/: .catkin  .rosinstall  setup.sh
temp_ws/devel/include/berkeley_sawyer/: delete_traj.h  delete_trajRequest.h  delete_trajResponse.h  get_action.h  get_actionRequest.h  get_actionResponse.h  get_kinectdata.h  get_kinectdataRequest.h  get_kinectdataResponse.h  init_traj.h  init_trajRequest.h  init_trajResponse.h  init_traj_visualmpc.h  init_traj_visualmpcRequest.h  init_traj_visualmpcResponse.h  save_kinectdata.h  (+2 more)
temp_ws/src/: .rosinstall
temp_ws/src/ddpg/: CMakeLists.txt
temp_ws/src/sawyer_simulator-master/sawyer_sim_examples/: CMakeLists.txt  package.xml
temp_ws/src/sawyer_simulator-master/sawyer_sim_examples/launch/: sawyer_ddpg.launch
temp_ws/src/sawyer_simulator-master/sawyer_sim_examples/models/cafe_table/: model.sdf
temp_ws/src/sawyer_simulator-master/sawyer_sim_examples/models/cafe_table/meshes/: cafe_table.dae
temp_ws/src/sawyer_simulator-master/sawyer_sim_examples/models/kinect/: model.sdf
temp_ws/src/sawyer_simulator-master/sawyer_sim_examples/scripts/: ik_pick_and_place_demo.py  ik_pick_and_place_test.py  sawyer_PPO_4d.py  sawyer_TD3_4d.py  sawyer_dagger_student.py  sawyer_dagger_teacher.py  sawyer_dagger_teacher_4d.py  sawyer_ddpg.py  sawyer_ddpg_4d.py  shapes_randomizer.py  test2.py
vel_ctrl/: modern_robotics.py  sawyer_MR_description.py  sawyer_velocity_control.py  vel_ctrl_ref_code.py
(+557 files in other folders)
