cmake_minimum_required(VERSION 2.8.3)
project(sawyer_sim_examples)

find_package(catkin REQUIRED COMPONENTS
  rospy
  intera_core_msgs
  gazebo_msgs
  message_generation
)

add_message_files( DIRECTORY msg
FILES
GoalObs.msg
PosCmd.msg
)


generate_messages(
  DEPENDENCIES
  std_msgs
  sensor_msgs
)


catkin_package(
  CATKIN_DEPENDS
  rospy
  intera_core_msgs
  gazebo_msgs
  message_generation
  message_runtime
  cv_bridge
)



#############
## Install ##
#############

install(PROGRAMS
   scripts/ik_pick_and_place_demo.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

foreach(dir launch models)
   install(DIRECTORY ${dir}/
      DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
endforeach(dir)
